force-app/main/default/objects/cgcloud__Package_Version__mdt/cgcloud__Package_Version__mdt.object-meta.xml
<CustomObject>
    <description>Contains the version of the current manage package</description>
    <label>Package Version</label>
    <pluralLabel>Package Versions</pluralLabel>
</CustomObject>