force-app/main/default/objects/cgcloud__Package_Version__mdt/fields/cgcloud__Maintenance__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Maintenance__c</fullName>
    <description>Patch Version of the package</description>
    <label>Maintenance</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>