force-app/main/default/objects/cgcloud__Package_Version__mdt/fields/cgcloud__Major__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Major__c</fullName>
    <description>Major version of the package</description>
    <label>Major</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>