force-app/main/default/objects/cgcloud__Package_Version__mdt/fields/cgcloud__Minor__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Minor__c</fullName>
    <description>Minor version of the package</description>
    <label>Minor</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>